2002-10-26  Mike Kestner <mkestner@speakeasy.net>

	* api/*.xml : get libgda and libgnomedb metadata setup
	* gconf/*/Makefile.in : patch from MauricioC for -L's and /r's
	* gnomedb/Makefile.in : patch from MauricioC for -L's and /r's
	* generator/ClassBase.cs (ctor): mangle hash names for sigs and props
	* generator/Parameters.cs (MangleName): handle params, null, and ref
	* generator/Parser.cs (ParseNamespace): ignore "hidden" types
	* generator/StructBase.cs (MangleName): handle params, null, and ref
	* glib/Object.cs (Equals): kill, also kill == and !=
	* sources/Gda.metadata : new, make Gda behave without hand edits
	* sources/GnomeDb.metadata : ditto

2002-10-21  Vladimir Vukicevic  <vladimir@pobox.com>

	* glade/XML.custom: add SetCustomHandler() wrapper

2002-10-20  Miguel de Icaza  <miguel@ximian.com>

	* glib/Object.cs: Avoid recursive calls with the previous operator
	!= and operator ==

2002-10-19  Duncan Mak  <duncan@ximian.com>

	* glib/Source.cs: Added.

2002-10-19  Miguel de Icaza  <miguel@ximian.com>

	* glib/Object.cs: Added operator != and operator == overloads.

2002-10-19  Rachel Hestilow <hestilow@ximian.com>

	* gconf, sample/gconf: Added.
	
	* glue/combo.c: This was never added, add it now.

	* configure.in, makefile, sample/Makefile.in: Build new
	gconf bindings if gnome is enabled.
	
2002-10-14  Mike Kestner <mkestner@speakeasy.net>

	* glib/Object.cs (GetObject): remove (int) cast

2002-10-11  Martin Baulig  <martin@gnome.org>

	* gtk/Combo.custom: New file.
	(Combo.SetPopdownStrings): New method to set the popdown strings
	from a string array.

2002-10-11  Martin Baulig  <martin@gnome.org>

	* glib/ListBase.cs (ListBase.Append): New public method.
	(ListBase.Prepend): New public method.

2002-10-11  Martin Baulig  <martin@gnome.org>

	* glib/FileUtils.cs: New file.  Wrapped g_file_get_contents() here.

2002-10-10  Mike Kestner <mkestner@speakeasy.net>

	* generator/CallbackGen.cs : some fixes