@@ -1,3 +1,13 @@
+2002-10-26  Ettore Perazzoli  <ettore@ximian.com>
+
+	* glib/Object.cs: Changed so that Objects is a hash of
+	WeakReferences instead of hashing the real objects.  Without this
+	change, GObjects were never collected.
+	(Raw, set): Put a WeakReference to the object in Objects.
+	(Object.GetObject): Get the WeakReference from Objects, and from
+	there the actual object.
+	(Object.DisposeNative): Remove the Raw pointer from Objects.
+
 2002-10-26  Mike Kestner <mkestner@speakeasy.net>
 
 	* api/*.xml : get libgda and libgnomedb metadata setup
